# rejection-sampler

./: .gitignore  LICENSE  README.md  pyproject.toml
src/rejection_sampler/: __init__.py  core.py  exceptions.py
tests/: test_find_optimal_M.py
